[gd_scene load_steps=4 format=3 uid="uid://btxki3vg4asqt"]

[ext_resource type="Script" uid="uid://bquymjoud3xwe" path="res://assets/gather_battery/gather_battery.gd" id="1_hdkee"]
[ext_resource type="PackedScene" uid="uid://bfja8p3u16jmx" path="res://assets/player/car_battery_girl/car_battery_girl.tscn" id="2_sc8jn"]
[ext_resource type="PackedScene" uid="uid://dmxtmmv6jag7b" path="res://assets/BeachItems/CarBattery/battery_1.tscn" id="3_a82tk"]

[node name="GatherBattery" type="Node3D"]
script = ExtResource("1_hdkee")

[node name="CarBatteryGirl" parent="." instance=ExtResource("2_sc8jn")]
unique_name_in_owner = true
transform = Transform3D(0.73221, 0, -0.681079, 0, 1, 0, 0.681079, 0, 0.73221, 0, 0, 0)

[node name="CutsceneCamera" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.893371, 0.0078417, -0.449251, 0, 0.999848, 0.0174524, 0.449319, -0.0155915, 0.893235, -1.30105, 0.898311, 2.07876)
fov = 50.0

[node name="Battery1" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(0.476131, 0, 0.879374, 0, 1, 0, -0.879374, 0, 0.476131, 0.338472, 0.1, -0.733587)

[node name="Battery2" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(0.251968, 0, 0.967736, 0, 1, 0, -0.967736, 0, 0.251968, -0.125776, 0.1, -0.985972)

[node name="Battery3" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(0.703655, 0, 0.710542, 0, 1, 0, -0.710542, 0, 0.703655, -0.618203, 0.1, -1.07822)

[node name="Battery4" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(0.533954, 0, 0.845514, 0, 1, 0, -0.845514, 0, 0.533954, -0.583355, 0.1, -1.59707)

[node name="Battery5" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(0.162276, 0, 0.986746, 0, 1, 0, -0.986746, 0, 0.162276, -0.0634491, 0.1, -1.69838)

[node name="Battery12" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(0.0539743, 0, 0.998542, 0, 1, 0, -0.998542, 0, 0.0539743, -0.418703, 0.1, -1.85184)

[node name="Battery6" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(0.661919, 0.000692237, 0.749575, 0.00345692, 0.999986, -0.00397614, -0.749567, 0.0052231, 0.661907, 0.509748, 0.1, -1.36901)

[node name="Battery7" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(-0.315222, 0.00486315, 0.949006, 0.00345692, 0.999986, -0.00397614, -0.949012, 0.00202726, -0.315234, 0.031636, 0.1, -1.31404)

[node name="Battery10" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(0.310039, 0.00270847, 0.95072, 0.00345692, 0.999986, -0.00397614, -0.950718, 0.00451932, 0.310025, 0.303633, 0.0999999, -1.05135)

[node name="Battery8" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(0.854602, -0.00501901, -0.51926, 0.00345692, 0.999986, -0.00397614, 0.519273, 0.00160299, 0.854607, -0.322367, 0.1, -1.3398)

[node name="Battery9" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(0.938314, -0.0046185, -0.345752, 0.00345692, 0.999986, -0.00397614, 0.345766, 0.00253564, 0.938317, -0.213915, 0.3, -1.25561)

[node name="Battery13" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(0.522268, 0.00158537, 0.85278, 0.00345692, 0.999986, -0.00397614, -0.852775, 0.0050246, 0.522255, -0.349805, 0.3, -1.61497)

[node name="Battery11" parent="." instance=ExtResource("3_a82tk")]
process_mode = 4
transform = Transform3D(-0.543278, 0.00521626, 0.839536, 0.00345692, 0.999986, -0.00397614, -0.839546, 0.000742048, -0.543289, 0.269772, 0.3, -1.30114)
